--- a/Hackathon_Tks/Hackathon_Tks/Base.lproj/Main.storyboard
+++ b/Hackathon_Tks/Hackathon_Tks/Base.lproj/Main.storyboard
@@ -267,11 +267,11 @@
                                                     </constraints>
                                                 </imageView>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j8m-MM-hmu">
-                                                    <rect key="frame" x="132" y="0.0" width="467.5" height="68.5"/>
+                                                    <rect key="frame" x="132" y="0.0" width="467.5" height="82"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G9L-iO-FLA">
-                                                            <rect key="frame" x="8" y="24" width="42" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <rect key="frame" x="8" y="27.5" width="56" height="27.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
@@ -283,12 +283,12 @@
                                                     </constraints>
                                                 </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cFC-tp-fpQ">
-                                                    <rect key="frame" x="132" y="68" width="467.5" height="68"/>
+                                                    <rect key="frame" x="132" y="81.5" width="467.5" height="54.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xxc-Ly-uM4">
-                                                            <rect key="frame" x="8" y="23" width="42" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <rect key="frame" x="8" y="17.5" width="37.5" height="18"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -306,7 +306,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="aj4-Ot-hF9" secondAttribute="bottom" constant="4" id="KzV-5u-tIG"/>
                                                 <constraint firstItem="aj4-Ot-hF9" firstAttribute="leading" secondItem="f3a-nW-L06" secondAttribute="leading" constant="4" id="TFo-Pt-0vw"/>
                                                 <constraint firstItem="aj4-Ot-hF9" firstAttribute="top" secondItem="f3a-nW-L06" secondAttribute="top" constant="4" id="ZCW-cq-EJi"/>
-                                                <constraint firstItem="j8m-MM-hmu" firstAttribute="height" secondItem="f3a-nW-L06" secondAttribute="height" multiplier="1:2" id="cJi-Pa-oFy"/>
+                                                <constraint firstItem="j8m-MM-hmu" firstAttribute="height" secondItem="f3a-nW-L06" secondAttribute="height" multiplier="1.2:2" id="cJi-Pa-oFy"/>
                                                 <constraint firstItem="j8m-MM-hmu" firstAttribute="top" secondItem="f3a-nW-L06" secondAttribute="top" id="mxU-4h-rls"/>
                                                 <constraint firstItem="cFC-tp-fpQ" firstAttribute="top" secondItem="j8m-MM-hmu" secondAttribute="bottom" id="o31-Uv-fdU"/>
                                                 <constraint firstAttribute="trailing" secondItem="cFC-tp-fpQ" secondAttribute="trailing" id="qQG-lH-yiV"/>
@@ -314,11 +314,16 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="img" destination="aj4-Ot-hF9" id="2K2-ug-Ch3"/>
                                             <outlet property="lblCount" destination="Xxc-Ly-uM4" id="VIg-X9-wis"/>
                                             <outlet property="lblTitle" destination="G9L-iO-FLA" id="0r3-O2-bzo"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="M8A-cR-Zom" id="zCB-hK-6uW"/>
+                                    <outlet property="delegate" destination="M8A-cR-Zom" id="7Y1-vT-Vro"/>
+                                </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GUE-Su-OMD">
                                 <rect key="frame" x="0.0" y="64" width="600" height="60"/>
@@ -427,8 +432,8 @@
                             <view alpha="0.94999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3h8-l8-pZx">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="SETTING" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49h-gw-w5a">
-                                        <rect key="frame" x="265" y="11.5" width="70" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SETTING" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49h-gw-w5a">
+                                        <rect key="frame" x="257.5" y="10" width="85" height="24"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
